--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "adventskalender",
-  "version": "0.0.1-alpha",
+  "version": "2020.0.1",
   "description": "",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
-    "start": "npx http-server src",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
+    "start": "npx http-server docs",
+    "build": "webpack --mode=production",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "MIT",
@@ -13,8 +15,13 @@
     "@babel/preset-env": "^7.12.1",
     "@types/jest": "^26.0.15",
     "babel-jest": "^26.6.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.2",
-    "jest": "^26.6.3"
+    "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
   },
   "jest": {
     "transform": {
