--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "adventskalender",
-  "version": "2020.0.0",
+  "version": "2020.0.1",
   "description": "",
   "private": "true",
   "scripts": {
-    "build": "webpack --mode=production",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "start": "npx http-server dist",
-    "watch": "webpack --watch"
+    "build": "webpack --config webpack.prod.js",
+    "serve": "webpack serve --config webpack.dev.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "author": "",
   "license": "MIT",
@@ -16,12 +15,14 @@
     "@types/jest": "^26.0.15",
     "babel-jest": "^26.6.3",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.2",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.6.1"
   },
   "jest": {
     "transform": {
